--- a/bin/index.html
+++ b/bin/index.html
@@ -1,14 +1,12 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>flixel-haxe</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="language" content="en" />
+	<meta charset="utf-8"/>
+	<title>FlixelHaxe</title>
 	<meta name="description" content="" />
-	<meta name="keywords" content="" />
 	
-	<script src="js/swfobject.js" type="text/javascript"></script>
-	<script type="text/javascript">
+	<script src="js/swfobject.js"></script>
+	<script>
 		var flashvars = {
 		};
 		var params = {
@@ -16,25 +14,27 @@
 			scale: "noScale",
 			allowFullscreen: "true",
 			allowScriptAccess: "always",
-			bgcolor: "#FFFFFF"
+			bgcolor: "",
+			wmode: "direct" // can cause issues with FP settings & webcam
 		};
 		var attributes = {
-			id:"flixelhaxe"
+			id:"FlixelHaxe"
 		};
-		swfobject.embedSWF("flixelhaxe.swf", "altContent", "100%", "100%", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
+		swfobject.embedSWF(
+			"FlixelHaxe.swf", 
+			"altContent", "100%", "100%", "10.0.0", 
+			"expressInstall.swf", 
+			flashvars, params, attributes);
 	</script>
-	<style type="text/css">
+	<style>
 		html, body { height:100%; overflow:hidden; }
 		body { margin:0; }
 	</style>
 </head>
 <body>
 	<div id="altContent">
-		<h1>flixel-haxe</h1>
-		<p>Alternative content</p>
-		<p><a href="http://www.adobe.com/go/getflashplayer"><img 
-			src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" 
-			alt="Get Adobe Flash player" /></a></p>
+		<h1>FlixelHaxe</h1>
+		<p><a href="http://www.adobe.com/go/getflashplayer">Get Adobe Flash player</a></p>
 	</div>
 </body>
 </html>
